--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
@@ -1,5 +1,5 @@
 # Back
-- type: loadout
+- type: itemLoadout
   id: SalvageSpecialistBackpack
   equipment: SalvageSpecialistBackpack
 
@@ -8,7 +8,7 @@
   equipment:
     back: ClothingBackpackSalvageFilled
 
-- type: loadout
+- type: itemLoadout
   id: SalvageSpecialistSatchel
   equipment: SalvageSpecialistSatchel
 
@@ -17,7 +17,7 @@
   equipment:
     back: ClothingBackpackSatchelSalvageFilled
 
-- type: loadout
+- type: itemLoadout
   id: SalvageSpecialistDuffel
   equipment: SalvageSpecialistDuffel
 
