--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/bartender.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/bartender.yml
@@ -1,5 +1,5 @@
 # Head
-- type: loadout
+- type: itemLoadout
   id: BartenderHead
   equipment: BartenderHead
 
@@ -8,7 +8,7 @@
   equipment:
     head: ClothingHeadHatTophat
 
-- type: loadout
+- type: itemLoadout
   id: BartenderBowler
   equipment: BartenderBowler
 
@@ -18,7 +18,7 @@
     head: ClothingHeadHatBowlerHat
 
 # Jumpsuit
-- type: loadout
+- type: itemLoadout
   id: BartenderJumpsuit
   equipment: BartenderJumpsuit
 
@@ -27,7 +27,7 @@
   equipment:
     jumpsuit: ClothingUniformJumpsuitBartender
 
-- type: loadout
+- type: itemLoadout
   id: BartenderJumpskirt
   equipment: BartenderJumpskirt
 
@@ -36,7 +36,7 @@
   equipment:
     jumpsuit: ClothingUniformJumpskirtBartender
 
-- type: loadout
+- type: itemLoadout
   id: BartenderJumpsuitPurple
   equipment: BartenderJumpsuitPurple
 
@@ -46,7 +46,7 @@
     jumpsuit: ClothingUniformJumpsuitBartenderPurple
 
 # Outer clothing
-- type: loadout
+- type: itemLoadout
   id: BartenderApron
   equipment: BartenderApron
 
@@ -55,7 +55,7 @@
   equipment:
     outerClothing: ClothingOuterApronBar
 
-- type: loadout
+- type: itemLoadout
   id: BartenderVest
   equipment: BartenderVest
 
