--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/janitor.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/janitor.yml
@@ -1,5 +1,5 @@
 # Head
-- type: loadout
+- type: itemLoadout
   id: JanitorHead
   equipment: JanitorHead
 
@@ -9,7 +9,7 @@
     head: ClothingHeadHatPurplesoft
 
 # Jumpsuit
-- type: loadout
+- type: itemLoadout
   id: JanitorJumpsuit
   equipment: JanitorJumpsuit
 
@@ -18,7 +18,7 @@
   equipment:
     jumpsuit: ClothingUniformJumpsuitJanitor
 
-- type: loadout
+- type: itemLoadout
   id: JanitorJumpskirt
   equipment: JanitorJumpskirt
 
