--- a/Resources/Prototypes/Loadouts/Jobs/Engineering/technical_assistant.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Engineering/technical_assistant.yml
@@ -1,5 +1,5 @@
 # Jumpsuit
-- type: loadout
+- type: itemLoadout
   id: YellowJumpsuit
   equipment: YellowJumpsuit
 
@@ -8,7 +8,7 @@
   equipment:
     jumpsuit: ClothingUniformJumpsuitColorYellow
 
-- type: loadout
+- type: itemLoadout
   id: YellowJumpskirt
   equipment: YellowJumpskirt
 
