--- a/Resources/Prototypes/Loadouts/Jobs/Medical/medical_intern.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/medical_intern.yml
@@ -1,5 +1,5 @@
 # Jumpsuit
-- type: loadout
+- type: itemLoadout
   id: WhiteJumpsuit
   equipment: WhiteJumpsuit
 
@@ -8,7 +8,7 @@
   equipment:
     jumpsuit: ClothingUniformJumpsuitColorWhite
 
-- type: loadout
+- type: itemLoadout
   id: WhiteJumpskirt
   equipment: WhiteJumpskirt
 
