--- a/Resources/Prototypes/Loadouts/Jobs/Science/research_director.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Science/research_director.yml
@@ -1,12 +1,12 @@
 # Head
 
-- type: loadout
+- type: itemLoadout
   id: ResearchDirectorBeret
   equipment: ScientificBeret
 
 # Neck
 
-- type: loadout
+- type: itemLoadout
   id: ResearchDirectorMantle
   equipment: ResearchDirectorMantle
 
@@ -15,7 +15,7 @@
   equipment:
     neck: ClothingNeckMantleRD
 
-- type: loadout
+- type: itemLoadout
   id: ResearchDirectorCloak
   equipment: ResearchDirectorCloak
 
@@ -25,7 +25,7 @@
     neck: ClothingNeckCloakRd
 
 # Jumpsuit
-- type: loadout
+- type: itemLoadout
   id: ResearchDirectorJumpsuit
   equipment: ResearchDirectorJumpsuit
 
@@ -34,7 +34,7 @@
   equipment:
     jumpsuit: ClothingUniformJumpsuitResearchDirector
 
-- type: loadout
+- type: itemLoadout
   id: ResearchDirectorJumpskirt
   equipment: ResearchDirectorJumpskirt
 
@@ -44,7 +44,7 @@
     jumpsuit: ClothingUniformJumpskirtResearchDirector
 
 # Back
-- type: loadout
+- type: itemLoadout
   id: ResearchDirectorBackpack
   equipment: ResearchDirectorBackpack
 
@@ -53,7 +53,7 @@
   equipment:
     back: ClothingBackpackResearchDirectorFilled
 
-- type: loadout
+- type: itemLoadout
   id: ResearchDirectorSatchel
   equipment: ResearchDirectorSatchel
 
@@ -62,7 +62,7 @@
   equipment:
     back: ClothingBackpackSatchelResearchDirectorFilled
 
-- type: loadout
+- type: itemLoadout
   id: ResearchDirectorDuffel
   equipment: ResearchDirectorDuffel
 
@@ -72,7 +72,7 @@
     back: ClothingBackpackDuffelResearchDirectorFilled
 
 # OuterClothing
-- type: loadout
+- type: itemLoadout
   id: ResearchDirectorLabCoat
   equipment: ResearchDirectorLabCoat
 
