--- a/Resources/Prototypes/Loadouts/Jobs/Wildcards/reporter.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Wildcards/reporter.yml
@@ -1,5 +1,5 @@
 # Jumpsuit
-- type: loadout
+- type: itemLoadout
   id: ReporterJumpsuit
   equipment: ReporterJumpsuit
 
@@ -8,7 +8,7 @@
   equipment:
     jumpsuit: ClothingUniformJumpsuitReporter
 
-- type: loadout
+- type: itemLoadout
   id: JournalistJumpsuit
   equipment: JournalistJumpsuit
 
